Fix z-index for modals
Select2 did not previously have a high enough `z-index` for it to
be displayed over modals. The `z-index` has been raised to 1051,
so now it should appear over the jQuery UI and Bootstrap modals.

This closes https://github.com/select2/select2/issues/2958.

--- a/src/scss/_dropdown.scss
+++ b/src/scss/_dropdown.scss
@@ -13,7 +13,7 @@
 
   width: 100%;
 
-  z-index: 100;
+  z-index: 1051;
 }
 
 .select2-results {
